<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoChan</string>
    <string name="action_settings">Settings</string>
    <string name="action_sortDateText">Sort By Newest</string>
    <string name="action_sortScoreText">Sort By Score</string>
    <string name="action_sortProximityText">Sort By Proximity</string>
    <string name="action_sortProximityToText">Sort By Proximity To&#8230;</string>
    <string name="action_sortLatestGreatestText">Sort By Latest/Greatest</string>
    <string name="action_sortPictureText">Sort By Picture</string>
    <string name="action_logoutText">Logout</string>
    <string name="action_helpText">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Topics</string>
    <string name="title_section2">Favorites</string>
    <string name="title_section3">Read Later</string>
    <string name="prompt_username">Username</string>
    <string name="login">Login</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="new_post">NEW</string>
    <string name="list_text">Text</string>
    <string name="list_header">Header</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="body_text_prompt">Post Text</string>
    <string name="topic_prompt">Topic Name</string>
    <string name="post_buton">Post</string>
    <string name="location_prompt">Edit Location</string>
    <string name="current_location">Location</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_edit_topic">EditTopicActivity</string>
    <string name="connectionStatus">No Connection</string>
    <string name="title_activity_post_view">PostViewActivity</string>
    <string name="topic_view_vctivity">Topic View Activity</string>
    <string name="comment_view_activity">Comment View Activity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_map_view">MapViewActivity</string>
    <string name="title_activity_picture_view">PictureViewActivity</string>
    <string name="title_activity_help_view">HelpActivity</string>
    <string name="read_later">Read Later</string>

</resources>
