<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/new_post" />

    <AutoCompleteTextView
        android:id="@+id/autoCompletePostView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:hint="@string/body_text_prompt" >

        <requestFocus />
    </AutoCompleteTextView>

    <ImageView
        android:id="@+id/imagePostView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/autoCompletePostView"
        android:layout_alignTop="@+id/textView1"
        android:src="@android:drawable/ic_menu_gallery" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTopicView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/autoCompletePostView"
        android:layout_alignLeft="@+id/autoCompletePostView"
        android:ems="10"
        android:hint="@string/topic_prompt" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/autoCompletePostView"
        android:text="@string/post_buton" />

    <EditText
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/postButton"
        android:layout_marginBottom="53dp"
        android:layout_toLeftOf="@+id/postButton"
        android:layout_toRightOf="@+id/textView1"
        android:hint="@string/location_prompt"
        android:ems="10" />

</RelativeLayout>